After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658206 - gsocks5proxy.c has invalid gettext use
gsocks5proxy.c has invalid gettext use
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
unspecified
Other All
: Normal trivial
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-09-04 23:24 UTC by Allison Karlitskaya (desrt)
Modified: 2011-09-18 14:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allison Karlitskaya (desrt) 2011-09-04 23:24:55 UTC
#: ../gio/gsocks5proxy.c:289
#, c-format
msgid "Hostname '%s' too long for SOCKSv5 protocol (maximum is %i bytes)"


seems like it will always be "bytes" since %i will always be greater than 1, but some languages have more complex plural rules.

Please don't fix this until after the release of 2.30.0.
Comment 1 Allison Karlitskaya (desrt) 2011-09-04 23:27:08 UTC
ditto:

#: ../gio/gsocks4aproxy.c:139
#, c-format
msgid "SOCKSv4 implementation limits username to %i characters"


this might be okay, though:
#: ../gio/gsocks5proxy.c:208
#, c-format
msgid "Username or password is too long for SOCKSv5 protocol (max. is %i)."
Comment 2 Dan Winship 2011-09-04 23:46:54 UTC
(In reply to comment #0)
> msgid "Hostname '%s' too long for SOCKSv5 protocol (maximum is %i bytes)"
> 
> seems like it will always be "bytes" since %i will always be greater than 1,
> but some languages have more complex plural rules.

not only will it always be greater than 1, it will always be exactly 255. wacky...
Comment 3 Matthias Clasen 2011-09-10 14:38:35 UTC
We've branched now, so feel free to land your favourite rewording in master.
Comment 4 Dan Winship 2011-09-18 14:52:13 UTC
fixed